<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/amarelo"
            android:text="@string/btn_M"/>

        <Button
            android:id="@+id/button_K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/btn_K"/>

        <Button
            android:id="@+id/button_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/btn_C"/>

        <Button
            android:id="@+id/button_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde"
            android:text="@string/btn_I"/>

    </LinearLayout>

    <EditText
        android:id="@+id/valor_monetario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digitar_valor"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text_payer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ListView
            android:id="@+id/receiver_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:choiceMode="singleChoice"/>

        <ListView
            android:id="@+id/payer_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:choiceMode="singleChoice"/>

    </LinearLayout>

    <TextView
        android:id="@+id/numero_jogadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_jogadores"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/nome_jogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_jogador"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_add_jogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_jogador"
        android:layout_gravity="center"/>


</LinearLayout>